css/src/_template-exceptional-item.scss
.exceptional-item.entry {
	padding: $site-padding;

	h1, h2 {
		text-transform: uppercase;
	}

	h2 {
		font-size: 2rem;
	}

	p {
		margin-bottom: 1rem;
	}

	.entry-header {
		text-align: center;
		max-width: 37.5rem;
		padding: 0 $site-padding;
		margin: 2rem auto;
	}

	.right {
		h3 {
			font-size: 1.5rem;
		}

		p {
			margin-bottom: 0;
		}

		.logos {
			background: #F1F2F2;
			padding: 1rem;
			text-align: center;

			span {
				$offset: rem-calc(9);
				display: inline-block;
				vertical-align: top;
				width: calc(50% - #{$offset});
			}
		}

		.logo-research {
			padding-right: 1rem;
			margin-right: 1rem;
			border-right: 2px solid #808285;
		}

		.text {
			background: $maroon-alt;
			color: $whiter;
			padding: 3rem 2rem;
		}

		.request {
			text-align: center;

			h3 {
				margin-bottom: 0;
			}

			.value {
				color: $light-green;
				font-size: 1.75rem;
			}
		}

		hr {
			border-bottom: 1px solid #FFF;
		}

		.pdf {
			margin-top: 1rem;

			a {
				text-decoration: none;
			}

			span {
				display: block;
				font-family: $tungsten;
				background: #0A3542;
				padding: 1rem;
				text-align: center;
				color: #FFF;
				font-size: 1.7rem;
			}
		}
	}

	.left {
		> h2 {
			margin-top: 2.5rem;
		}

		h3 {
			font-family: $body-font-family;
		}

		.subheading {
			font-weight: bold;
			font-style: italic;
		}
	}

	.background-text {
		font-size: 1.5rem;
		font-family: $opensans;
	}

	.item-director,
	.contact {
		background: #F1F1F2;
		padding: 1rem;

		h3 {
			font-size: 1.1rem;
			font-weight: bold;
		}

		img {
			margin-bottom: 1rem;
		}
	}

	.item-director {
		margin: 0 0 1rem;
	}

	.contact {
		margin: 1rem 0 0;
	}

	.contact {
		h2, h3 {
			width: 100%;
		}

		h2 {
			font-size: 1.9rem;
		}
	}

	@include breakpoint(small only){
		.entry-content {
			position: relative;
			padding-bottom: 401px;
		}

		.right.sticky-container,
		.right .sticky {
			position: static;
			transform: none;
		}

		.pdf {
			position: absolute;
			bottom: 0;
			left: 0;
			width: 100%;
		}
	}

	@include breakpoint(medium){
		@include xy-grid-container($break-xlarge, 0);
		padding: 0 0 2rem;

		.entry-content {
			@include xy-grid;
		}

		.heading h1 {
			font-size: 4rem;
	  }

		.left,
		.right {
			@include xy-cell-base();
		}

		.right {
			@include xy-cell(4, $gutter-type: padding, $gutters: 2rem);
			order: 2;
			float: right;
		}

		.left {
			@include xy-cell(8, $gutter-type: padding, $gutters: 2rem);
			order: 1;

			> h2:first-child {
				margin-top: 0;
			}
		}

		.contacts {
			@include xy-grid;

			> div {
				@include xy-cell-base();
			}

			.item-director {
				@include xy-cell($size: 50%, $gutter-position: right, $gutters: 1rem);
			}

			.contact {
				@include xy-cell($size: 50%, $gutter-position: left, $gutters: 1rem);
			}
		}
	}
}

